commit jeudi carte mise à jour avec clé api

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         <option value="osm">OpenStreetMap</option>
                         <option value="cartoLight">Carto Light</option>
                         <option value="cartoDark">Carto Dark</option>
+                        <option value="stadiamaps">Stadia Maps</option>
                         <option value="stadiamapsDark" selected>Stadia Dark</option>
                     </select>
                 
